# PrestoGeometry

./: .gitignore  LICENSE  README.md  annotate.bat  assemble.bat  environment.yml  install.bat  launch.bat  pyproject.toml  requirements.txt
data/annotations/UnivStThomas_1loop/: UnivStThomas_1loop.json  UnivStThomas_1loop_SAMPLE.json
docs/: workflow_diagram.drawio
examples/: 40x40_3story_8windows.json  run_pose_extraction.py
frontend/: index.html  package-lock.json  package.json  tsconfig.tsbuildinfo  vite.config.ts
frontend/src/: App.tsx  styles.css
frontend/src/components/: EditorCanvas.tsx  ImportExportPanel.tsx  InspectorPanel.tsx  PreviewCanvas3D.tsx  StoriesPanel.tsx  ThermalZonesPanel.tsx  Toolbar.tsx  ViewTabs.tsx  WindowDoorDefsPanel.tsx
frontend/src/drawing/: geometryOps.test.ts  geometryOps.ts  snap.test.ts  snap.ts
frontend/src/io/: floorspaceJson.ts
notebooks/: annotate_building.py  assemble_geometry.py  edge_detection_prototype.ipynb  generate_prototype.py
presto_geometry/: __init__.py  __main__.py
presto_geometry/exporters/: floorspace.py
presto_geometry/models/: building.py
presto_geometry/reconstruction/: __init__.py  floorspace_builder.py  footprint.py  pipeline.py  pose_extractor.py  weights.py
presto_geometry/schemas/: __init__.py  floorspace_geometry_schema.json
presto_geometry/web/: __init__.py  __main__.py  api.py  server.py
tests/: test_floorspace_builder.py  test_footprint.py  test_models.py  test_pose_extractor.py  test_web.py  test_web_pose.py
tools/: annotate_building.py  assemble_geometry.py  launcher.py
(+10 files in other folders)
