[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "presto_geometry"
version = "0.1.0"
description = "Turn building photos into floorspace.js geometry for energy modelling."
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
dependencies = [
  "numpy>=1.26",
  "matplotlib>=3.8",
  "Pillow>=10.0",
  "opencv-python>=4.9",
  "shapely>=2.0",
  "scipy>=1.11",
  "scikit-learn>=1.3",
  "eppy>=0.5.63",
  "lxml>=5.0",
  "click>=8.1",
  "flask>=3.0",
  "jsonschema>=4.23",
]

[project.optional-dependencies]
dust3r = [
  "torch",
  "torchvision",
  "tqdm",
  "einops",
  "roma",
  "huggingface_hub",
]
dev = [
  "pytest>=8.0",
  "pytest-cov>=5.0",
]

[tool.setuptools.packages.find]
include = ["presto_geometry*"]

[tool.setuptools.package-data]
"presto_geometry.schemas" = ["*.json"]
